--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -17,20 +17,17 @@ $half-column-gutter: $column-gutter / 2;
 $ms-base: $base-font-size 42;
 $ms-ratio: $golden;
 
-//$white: #f4ebe6;
-$black: #332f2f;
-
-$orange: #e9572e;
 $white: #fcfcfc;
 $lighter-grey: #e5e5e5;
 $light-grey: #b3b3b3;
 $grey: #808080;
 $dark-grey: #414141;
+$black: #332f2f;
 
 $green: #3be541;
 $red: #ff4332;
 
-$accent: $orange;
+$accent: $grey;
 $accent-hover: $dark-grey;
 
 $bar-one: $green;
@@ -122,7 +119,7 @@ $form-padding: remCalc(10) remCalc(8);
 // Select box needs to be 2px smaller
 $select-padding: remCalc(10) remCalc(8);
 $form-border: $border-width $border-stroke $black;
-$form-border-focus: $border-width $border-stroke $orange;
+$form-border-focus: $border-width $border-stroke $accent;
 $form-font-size: $font-minus-one;
 $form-width: 100%;
 
@@ -131,7 +128,7 @@ $form-width: 100%;
 */
 $button-padding: remCalc(9) remCalc(10) remCalc(8);
 $button-color: $white;
-$button-bk-color: $orange;
+$button-bk-color: $accent;
 $button-border: $border-width $border-stroke $accent;
 $button-color-hover: $white;
 $button-bk-color-hover: $accent-hover;
@@ -149,15 +146,6 @@ $global-radius: 0;
 * Drop Shadow Settings
 */
 $drop-shadow: rgba(0, 0, 0, .2) 1px 1px 3px;
-
-/**
-* Cookie Bar Settings
-*/
-$cookie-bar-bk-color: $black;
-$cookie-bar-color: $white;
-$cookie-bar-link-color: $accent;
-$cookies-on-color: $accent;
-$cookies-off-color: $grey;
 
 /**
 * Selection Settings
