--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -10,7 +10,6 @@ $base-line-height: 1.4;
 $em-base: $base-font-size !default;
 
 $wrapper-width: 1024;
-$row-width: remCalc($wrapper-width - $base-font-size*6);
 $column-gutter: remCalc($base-font-size*$base-line-height);
 $half-column-gutter: $column-gutter / 2;
 
@@ -30,14 +29,8 @@ $red: #ff4332;
 $accent: $grey;
 $accent-hover: $dark-grey;
 
-$bar-one: $green;
-$bar-two: transparent;
-$bar-three: $red;
-
-// $error-color: #ef191d;
 $error-color: $red;
 $valid-color: $green;
-// $valid-color: #00d611;
 
 $top-menu-height: remCalc(80);
 
@@ -160,11 +153,13 @@ $default-transition: all, 0.2s ease-in-out;
 
 // Media Query Ranges
 
-$small-range: (650px, 1023px);
-$medium-range: (1024px, 1240px);
-$large-range: (1241px, 1449px);
-$xlarge-range: (1450px, 1600px);
-$xxlarge-range: (1600px);
+$xsmall-range: (421px, 767px);
+$small-range: (768px, 1023px);
+$medium-range: (1024px, 1239px);
+$large-range: (1240px, 1439px);
+$xlarge-range: (1440px, 1599px);
+$xxlarge-range: (1600px, 1919px);
+$xxlarge-range: (1920px);
 
 $small: upper-bound($small-range);
 $medium: upper-bound($medium-range);
@@ -175,8 +170,11 @@ $screen: "only screen";
 $landscape: "#{$screen} and (orientation: landscape)";
 $portrait: "#{$screen} and (orientation: portrait)";
 
+$xsmall-up: "#{$screen} and (min-width:#{lower-bound($xsmall-range)})";
+$xsmall-only: "#{$screen} and (max-width: #{upper-bound($xsmall-range)})";
+
 $small-up: "#{$screen} and (min-width:#{lower-bound($small-range)})";
-$small-only: "#{$screen} and (max-width: #{upper-bound($small-range)})";
+$small-only: "#{$screen} and (min-width:#{lower-bound($small-range)}) and (max-width:#{upper-bound($small-range)})";
 
 $medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})";
 $medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})";
@@ -187,6 +185,4 @@ $large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-w
 $xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})";
 $xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})";
 
-//$xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})";
-//$xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})";
-
+$xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})";
