--- a/src/sass/layout/_base.scss
+++ b/src/sass/layout/_base.scss
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+*:focus {
+  outline: none;
+}
+
 html, body {
     font-family: $base-font-family;
     font-weight: $font-weight-bold;
