--- a/src/sass/elements/_buttons.scss
+++ b/src/sass/elements/_buttons.scss
@@ -1,5 +1,5 @@
 
-.button,
+a.button,
 button,
 input[type="submit"],
 input[type="reset"],
@@ -16,7 +16,7 @@ input[type="button"] {
   font-family: $base-font-family;
 }
 
-.button.active,
+a.button.active,
 .button:hover,
 button:hover,
 input[type="submit"]:hover,
@@ -27,7 +27,7 @@ input[type="button"]:hover {
   border: $button-border-hover;
 }
 
-.button:focus,
+a.button:focus,
 button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
@@ -35,7 +35,8 @@ input[type="button"]:focus {
   @extend .button.active;
 }
 
-.button:active,
+a
+a.button:active,
 button:active,
 input[type="submit"]:active,
 input[type="reset"]:active,
@@ -43,7 +44,8 @@ input[type="button"]:active {
   @extend .button.active;
 }
 
-.button.full-width,
+a
+a.button.full-width,
 button.full-width,
 input[type="submit"].full-width,
 input[type="reset"].full-width,
@@ -54,7 +56,7 @@ input[type="button"].full-width {
   text-align: center;
 }
 
-.button.disabled,
+a.button.disabled,
 button.disabled,
 button:disabled,
 input[type="submit"].disabled,
@@ -68,7 +70,7 @@ input[type="button"].disabled {
   }
 }
 
-.button.destructive,
+a.button.destructive,
 button.destructive,
 input[type="submit"].destructive,
 input[type="reset"].destructive,
@@ -83,7 +85,7 @@ input[type="button"].destructive {
   }
 }
 
-.button.affirmative,
+a.button.affirmative,
 button.affirmative,
 input[type="submit"].affirmative,
 input[type="reset"].affirmative,
