--- a/src/sass/elements/_typography.scss
+++ b/src/sass/elements/_typography.scss
@@ -11,12 +11,7 @@ h1, h2, h3, h4, h5, h6, .header-one {
 
 h1, .header-one {
     font-size: $font-six;
-    a {
-        color: $accent;
-        &:hover {
-            color: $accent-hover;
-        }
-    }
+    margin-bottom: $half-column-gutter;
 }
 
 h2, .header-two {
@@ -56,7 +51,7 @@ a, a:visited {
     text-decoration: none;
 }
 
-a:hover, a:focus {
+a:hover, a:focus, a.active {
     color: $link-hover-color;
     text-decoration: $link-decoration;
 }
