--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -16,7 +16,7 @@ $half-column-gutter: $column-gutter / 2;
 $ms-base: $base-font-size 20;
 $ms-ratio: $golden;
 
-$white: aquamarine;
+$white: #fcfcfc;
 $lighter-grey: #e5e5e5;
 $light-grey: #b3b3b3;
 $grey: #808080;
