--- a/src/sass/_settings.scss
+++ b/src/sass/_settings.scss
@@ -17,7 +17,8 @@ $ms-base: $base-font-size 20;
 $ms-ratio: $golden;
 
 $white: #fcfcfc;
-$lighter-grey: #e5e5e5;
+$lightest-grey: #f7f7f7;
+$lighter-grey: #eeeeee;
 $light-grey: #b3b3b3;
 $grey: #808080;
 $dark-grey: #414141;
@@ -26,7 +27,7 @@ $black: #332f2f;
 $green: #3be541;
 $red: #ff4332;
 
-$accent: $grey;
+$accent: $black;
 $accent-hover: $dark-grey;
 
 $error-color: $red;
@@ -45,7 +46,7 @@ $link-decoration: none;
 /**
 * Border Settings
 */
-$border-color: $grey;
+$border-color: $light-grey;
 $border-width: 1px;
 $border-stroke: solid;
 $border: $border-width $border-stroke $border-color;
@@ -77,7 +78,7 @@ $light-text-colour: #515151;
 /**
 * Font Settings
 */
-$base-font-family: "Quire Sans W04", Verdana, Helvetica, Arial, sans;
+$base-font-family: "aller", Tahoma, Avenir, Helvetica, Arial, sans;
 
 $font-style: italic;
 
@@ -104,22 +105,21 @@ $font-twelve: remCalc(ms(11));
 /**
 * Form Settings
 */
-$input-color: $light-grey;
-$input-focus-color: $light-grey;
+$input-color: $black;
+$input-focus-color: $black;
 $input-bk-color: $white;
 $input-focus-bk-color: $white;
-$form-padding: remCalc(10) remCalc(8);
-// Select box needs to be 2px smaller
-$select-padding: remCalc(10) remCalc(8);
-$form-border: $border-width $border-stroke $black;
+$form-padding: remCalc(4) remCalc(6);
+$select-padding: remCalc(4) remCalc(6);
+$form-border: $border-width $border-stroke $light-grey;
 $form-border-focus: $border-width $border-stroke $accent;
-$form-font-size: $font-minus-one;
+$form-font-size: $font-one;
 $form-width: 100%;
 
 /**
 * Button Settings
 */
-$button-padding: remCalc(9) remCalc(10) remCalc(8);
+$button-padding: remCalc(5) remCalc(12) remCalc(5);
 $button-color: $white;
 $button-bk-color: $accent;
 $button-border: $border-width $border-stroke $accent;
@@ -127,13 +127,14 @@ $button-color-hover: $white;
 $button-bk-color-hover: $accent-hover;
 $button-border-hover: $border-width $border-stroke $accent-hover;
 
-$button-color-disabled: $light-grey;
+$button-color-disabled: $lighter-grey;
+$button-bk-disabled: $light-grey;
 $button-border-disabled: $border-width $border-stroke $light-grey;
 
 /**
 * Radius Settings
 */
-$global-radius: 0;
+$global-radius: 3px;
 
 /**
 * Drop Shadow Settings
@@ -161,9 +162,11 @@ $xlarge-range: (1440px, 1599px);
 $xxlarge-range: (1600px, 1919px);
 $xxlarge-range: (1920px);
 
+$xsmall: upper-bound($xsmall-range);
 $small: upper-bound($small-range);
 $medium: upper-bound($medium-range);
 $large: upper-bound($large-range);
+$xlarge: upper-bound($xlarge-range);
 
 $screen: "only screen";
 
@@ -171,18 +174,23 @@ $landscape: "#{$screen} and (orientation: landscape)";
 $portrait: "#{$screen} and (orientation: portrait)";
 
 $xsmall-up: "#{$screen} and (min-width:#{lower-bound($xsmall-range)})";
+$xsmall-down: "#{$screen} and (max-width:#{lower-bound($xsmall)})";
 $xsmall-only: "#{$screen} and (max-width: #{upper-bound($xsmall-range)})";
 
 $small-up: "#{$screen} and (min-width:#{lower-bound($small-range)})";
+$small-down: "#{$screen} and (max-width:#{lower-bound($small)})";
 $small-only: "#{$screen} and (min-width:#{lower-bound($small-range)}) and (max-width:#{upper-bound($small-range)})";
 
 $medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})";
+$medium-down: "#{$screen} and (max-width:#{lower-bound($medium)})";
 $medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})";
 
 $large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})";
+$large-down: "#{$screen} and (max-width:#{lower-bound($large)})";
 $large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})";
 
 $xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})";
+$xlarge-down: "#{$screen} and (max-width:#{lower-bound($xlarge)})";
 $xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})";
 
 $xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})";
