--- a/src/sass/elements/_buttons.scss
+++ b/src/sass/elements/_buttons.scss
@@ -14,6 +14,9 @@ input[type="button"] {
   line-height: $base-line-height;
   padding: $button-padding;
   font-family: $base-font-family;
+  transition: background-color 340ms ease, border-color 340ms ease;
+  border-radius: $global-radius;
+  -webkit-appearance: none;
 }
 
 a.button.active,
@@ -35,7 +38,6 @@ input[type="button"]:focus {
   @extend .button.active;
 }
 
-a
 a.button:active,
 button:active,
 input[type="submit"]:active,
@@ -44,7 +46,6 @@ input[type="button"]:active {
   @extend .button.active;
 }
 
-a
 a.button.full-width,
 button.full-width,
 input[type="submit"].full-width,
@@ -65,8 +66,12 @@ input[type="button"].disabled {
   cursor: default;
   border: $button-border-disabled;
   color: $button-color-disabled;
+  background-color: $button-bk-disabled;
   &:hover, &:active {
-    background-color: $white;
+    cursor: default;
+    border: $button-border-disabled;
+    color: $button-color-disabled;
+    background-color: $button-bk-disabled;
   }
 }
 
@@ -76,11 +81,11 @@ input[type="submit"].destructive,
 input[type="reset"].destructive,
 input[type="button"].destructive {
   border-color: $error-color;
-  background-color: $white;
-  color: $error-color;
+  background-color: $error-color;
+  color: $white;
   &:hover {
     border-color: $error-color;
-    background-color: $error-color;
+    background-color: $black;
     color: $white;
   }
 }
@@ -105,4 +110,66 @@ button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
   padding: 0;
+}
+
+button.switch {
+  border: none;
+  height: remCalc(28);
+  width: remCalc(48);
+  border-radius: remCalc(16);
+  background-color: $red;
+  overflow: hidden;
+  position: relative;
+  transition: background-color 100ms ease-in-out;
+  &.on {
+    background-color: $green;
+  }
+  &:after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: remCalc(26);
+    height: remCalc(26);
+    background-color: $white;
+    top: remCalc(1);
+    left: remCalc(1);
+    border-radius: remCalc(14);
+    transition: left 280ms ease-in-out;
+  }
+  &.on:after {
+    left: remCalc(21);
+  }
+}
+
+button.radio-button {
+  background-color: $dark-grey;
+  border-color: $dark-grey;
+  border-right: $border-width $border-stroke $lighter-grey;
+  margin-bottom: 0;
+  border-radius: 0;
+  &:hover {
+    border-color: $grey;
+    background-color: $grey;
+    border-right: $border-width $border-stroke $lighter-grey;
+  }
+  &:first-of-type {
+    border-top-left-radius: $global-radius;
+    border-bottom-left-radius: $global-radius;
+  }
+  &:last-of-type {
+    border-bottom-right-radius: $global-radius;
+    border-top-right-radius: $global-radius;
+    border-right: $border-width $border-stroke $dark-grey;
+    &.checked {
+      border-right: $border-width $border-stroke $green;
+    }
+    &:hover {
+      border-right: $border-width $border-stroke $lighter-grey;
+    }
+  }
+  &.checked {
+    border-color: $green;
+    background-color: $green;
+    border-right: $border-width $border-stroke $lighter-grey;
+  }
 }
