--- a/src/sass/elements/_tables.scss
+++ b/src/sass/elements/_tables.scss
@@ -7,32 +7,35 @@ th {
     text-align: left;
     font-size: $font-one;
     font-weight: $font-weight-bold;
-    border: $border;
 }
 
 tr:nth-child(odd) td:nth-child(odd) {
-    background-color: $white;
+  background-color: $lighter-grey;
 }
 
 tr:nth-child(even) td:nth-child(odd) {
-    background-color: $white;
+  background-color: $lightest-grey
 }
 
 tr:nth-child(odd) td:nth-child(even) {
-    background-color: $white;
+  background-color: $lighter-grey;
 }
 
 tr:nth-child(even) td:nth-child(even) {
-    background-color: $white;
+  background-color: $lightest-grey;
 }
 
 td, th {
-    padding: $half-column-gutter;
-    border: $border;
+  padding: $half-column-gutter / 3 $half-column-gutter / 2;
+  border: none;
+  border-bottom: 1px solid $light-grey;
 }
 
 td {
     text-align: left;
-    font-size: $font-one;
+  font-size: 0.8rem;
     font-weight: $font-weight-regular;
+  button {
+    width: 100%;
+  }
 }
