Added rudimentary legend to plot

--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -36,6 +36,47 @@ canvas {
   }
 }
 
+.plot-container {
+  position: relative;
+}
+
+.plot-holder {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
+.plot-legend {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  padding: 8px;
+  background-color: $white;
+  border: $border;
+  border-radius: $global-radius;
+  ul {
+    margin-bottom: 0;
+  }
+  li {
+    font-weight: normal;
+    list-style: none;
+    margin-bottom: 0;
+    color: $grey;
+    position: relative;
+    &.grey:after {
+      content: '';
+      display: block;
+      height: 8px;
+      width: $half-column-gutter;
+      position: absolute;
+      left: -$column-gutter;
+      top: 8px;
+      background-color: $light-grey;
+    }
+  }
+}
+
 .reset-3d {
   position: relative;
   bottom: remCalc(60);
