--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,5 +10,6 @@
 @import "elements/color";
 @import "elements/typefaces";
 @import "elements/pagination";
+@import "elements/carousel";
 @import "layout/layout";
 @import "elements/helpers";
